--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -53,6 +53,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics32.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics33.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../GiorgioCarpinteri/Carpinteri1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics35.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics36.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics37.jpg"></div>
@@ -164,6 +165,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics142.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics143.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../PennyCentury/PennyCentury1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics144.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics145.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics146.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics147.jpg"></div>
@@ -174,6 +176,11 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics152.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics153.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics154.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics155.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics156.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics157.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics158.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics159.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -203,8 +210,8 @@ Titles
 <li><a href="Fantagraphics7.jpg">5000 Km Per Second</a> (2016)
 <li><a href="Fantagraphics10.jpg">A*K*Q*J</a> (1991)
 <li><a href="../AbandonedCars/AbandonedCars.html">Abandoned Cars</a> (2008)
-<li><a href="../AcmeNoveltyLibrary/AcmeNoveltyLibrary.html">Acme Novelty Library</a> (1993)
 <li><a href="Fantagraphics11.jpg">Abstract Comics</a> (2009)
+<li><a href="../AcmeNoveltyLibrary/AcmeNoveltyLibrary.html">Acme Novelty Library</a> (1993)
 <li><a href="Fantagraphics12.jpg">Action! Mystery! Thrills!</a> (2011)
 <li><a href="Fantagraphics13.jpg">Adastra in Africa</a> (1999)
 <li><a href="Fantagraphics14.jpg">Adult Frankenstein</a> (2006)
@@ -222,6 +229,7 @@ Titles
 <li><a href="Fantagraphics25.jpg">Alice Extreme</a> (2003)
 <li><a href="Fantagraphics26.jpg">Alice in Sexland</a> (2001)
 <li><a href="Fantagraphics27.jpg">Alien Sex</a> (1992)
+<li><a href="Fantagraphics144.jpg">Alienation</a> (2019)
 <li><a href="Fantagraphics28.jpg">Alienzkin</a> (2002)
 <li><a href="Fantagraphics153.jpg">All And Sundry</a> (2009)
 <li><a href="Fantagraphics154.jpg">All The Presidents</a> (2019)
@@ -234,10 +242,14 @@ Titles
 <li><a href="Fantagraphics156.jpg">Amora</a> (1991)
 <li><a href="Fantagraphics150.jpg">An Accidental Death</a> (1993)
 <li><a href="Fantagraphics22.jpg">An Age of License</a> (2014)
+<li><a href="Fantagraphics157.jpg">Ana</a> (1991)
 <li><a href="Fantagraphics31.jpg">Angry Youth Comix</a> (2001)
+<li><a href="Fantagraphics159.jpg">Anthology of Mind: Selected Short Stories</a> (2019)
 <li><a href="Fantagraphics32.jpg">Anything Goes!</a> (1986)
+<li><a href="Fantagraphics158.jpg">Any Similarity to Persons Living or Dead Is Purely Coincidental</a> (1985)
 <li><a href="Fantagraphics33.jpg">Anywhere But Here</a> (2005)
 <li><a href="Fantagraphics34.jpg">Ape</a> (2003)
+<li><a href="../GiorgioCarpinteri/GiorgioCarpinteri.html">Aquatlantic</a> (2020)
 <li><a href="Fantagraphics35.jpg">Artbabe</a> (1997)
 <li><a href="Fantagraphics36.jpg">Barnaby</a> (2013)
 <li><a href="Fantagraphics37.jpg">Beatrix Dominatrix</a> (1995)
