--- a/GregCapullo/GregCapullo.html
+++ b/GregCapullo/GregCapullo.html
@@ -25,6 +25,9 @@
 <div class="mySlides" style="text-align: center;"><img src="GregCapullo5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="GregCapullo6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Image/image209.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GregCapullo7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GregCapullo8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GregCapullo9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
