--- a/Image/image.html
+++ b/Image/image.html
@@ -570,7 +570,7 @@
 <div class="mySlides" style="text-align: center;"><img src="image550.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image551.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image552.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="image553.jpg" title="Greg Capullo"></div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
@@ -1089,6 +1089,7 @@ Titles
 <li><a href="image443.jpg">Rasputin</a> (2014)
 <li><a href="../RatQueens/RatQueens.html">Rat Queens</a> (2013)
 <li><a href="image444.jpg">Realm</a> (2017)
+<li><a href="image553.jpg" title="Greg Capullo">Reborn</a> (2016)
 <li><a href="image445.jpg">Redlands</a> (2017)
 <li><a href="image446.jpg">Redneck</a> (2017)
 <li><a href="image447.jpg">Reed Gunther</a> (2011)
