--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,41 @@
 </tr>
 
 <tr>
+<td>2020 Force Works</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2020 Iron Age</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2020 iWolverine</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2020 Machine Man</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2020 Rescue</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>2020 Visions</td>
 <td>1997</td>
 <td>Vertigo</td>
@@ -1245,6 +1280,27 @@
 <td>1996</td>
 <td>Marvel</td>
 <td><a href="2099World/2099World.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2099 Alpha</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2020 Omega</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2020 Unlimited</td>
+<td>2020</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3007,6 +3063,13 @@
 </tr>
 
 <tr>
+<td>Aero</td>
+<td>2019</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aeon Flux</td>
 <td>1991</td>
 <td>MTV</td>
@@ -4275,6 +4338,13 @@
 <td>2012</td>
 <td>Titan</td>
 <td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alienation</td>
+<td>2019</td>
+<td>Fantgraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6091,6 +6161,13 @@
 </tr>
 
 <tr>
+<td>Ana</td>
+<td>1991</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ana, Jungle Girl</td>
 <td>2000</td>
 <td>Avatar</td>
@@ -6791,6 +6868,13 @@
 </tr>
 
 <tr>
+<td>Anthology of Mind: Selected Short Stories</a>
+<td>2019</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Anti</td>
 <td>2012</td>
 <td>12 Gauge</td>
@@ -6809,6 +6893,13 @@
 <td>1996</td>
 <td>Didactic Chocolate</td>
 <td><a href="DidacticChocolatePress/DidacticChocolatePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Any Similarity to Persons Living or Dead Is Purely Coincidental</td>
+<td>1985</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7103,6 +7194,13 @@
 <td>1962</td>
 <td>DC</td>
 <td><a href="Aquaman/Aquaman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aquatlantic</td>
+<td>2020</td>
+<td>Fantagraphics</td>
+<td><a href="GiorgioCarpinteri/GiorgioCarpinteri.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13127,6 +13225,13 @@
 </tr>
 
 <tr>
+<td>Black Cat</td>
+<td>2019</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Cloud</td>
 <td>2017</td>
 <td>Image</td>
@@ -13490,6 +13595,13 @@
 <td>1977</td>
 <td>Marvel</td>
 <td><a href="BlackPanther/BlackPanther.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Panther And The Agents Of Wakanda</td>
+<td>2019</td>
+<td>Marvel</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67005,6 +67117,13 @@
 <td>2001</td>
 <td>Publisher</td>
 <td><a href="Rebellion/Rebellion.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Reborn</td>
+<td>2016</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
 </tr>
 
 <tr>
