--- a/HappyHooligan/HappyHooligan.html
+++ b/HappyHooligan/HappyHooligan.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-<img src="HappyHooligan1.jpg"> <br>
-Series: 1903<br>
-Created by F. Opper<br>
-Publisher: New York American and Journal<br>
+<img src="HappyHooligan1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -30,7 +27,7 @@ Publisher: New York American and Journal<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Happy Hooligan was a popular and influential early American comic strip, the first major strip by the already celebrated cartoonist Frederick Burr Opper. It debuted with a Sunday strip on March 11, 1900 in the William Randolph Hearst newspapers, and was one of the first popular comics with King Features Syndicate.
+Happy Hooligan was a popular and influential early American comic strip, the first major strip by the already celebrated cartoonist <a href="../FrederickBurrOpper/FrederickBurrOpper.html">Frederick Opper</a>. It debuted with a Sunday strip on March 11, 1900 in the William Randolph Hearst newspapers, and was one of the first popular comics with King Features Syndicate.
 </p><p>
 The strip told the adventures of a well-meaning hobo who encountered a lot of misfortune and bad luck, partly because of his appearance and low position in society, but who did not lose his smile over it. He was contrasted by his two brothers, the sour Gloomy Gus and the snobbish Montmorency, both just as poor as Happy. Montmorency wore a top hat and monocle but was otherwise as ragged as his siblings.
 </p><p>
