--- a/index.html
+++ b/index.html
@@ -32293,7 +32293,14 @@
 </tr>
 
 <tr>
-<td><a name="f">F.P. Steamcraft</a></td>
+<td><a name="f">F. M. Howarth</a></td>
+<td>1864</td>
+<td>Creator</td>
+<td><a href="FMHowarth/FMHowarth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>F. P. Steamcraft</a></td>
 <td>2016</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
@@ -35635,12 +35642,26 @@
 <td>MBS</td>
 <td><a href="MBSPublishing/MBSPublishing.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Frederick A. Stokes Company</td>
+<td>1882</td>
+<td>Publisher</td>
+<td><a href="FrederickStokesCo/FrederickStokesCo.html">Details</a></td>
+</tr>
  
 <tr>
 <td>Frederick And Eloise: A Love Story</td>
 <td>1993</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Frederick Opper</td>
+<td>1857</td>
+<td>Creator</td>
+<td><a href="FrederickBurrOpper/FrederickBurrOpper.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68138,6 +68159,13 @@
 <td>2004</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Richard Outcault</td>
+<td>1863</td>
+<td>Creator</td>
+<td><a href="RichardOutcault/RichardOutcault.html">Details</a></td>
 </tr>
 
 <tr>
