--- a/CupplesLeon/CupplesLeon.html
+++ b/CupplesLeon/CupplesLeon.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<b>Cupples &amp; Leon</b>
+<img src="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
