--- a/FrederickBurrOpper/FrederickBurrOpper.html
+++ b/FrederickBurrOpper/FrederickBurrOpper.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="FrederickBurrOpper1.jpg"> <br>
+<img src="Opper1.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
@@ -19,23 +19,34 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Opper13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Frederick Burr Opper (January 2, 1857 – August 28, 1937) is regarded as one of the pioneers of American newspaper comic strips, best known for his comic strip Happy Hooligan. His comic characters were featured in magazine gag cartoons, covers, political cartoons and comic strips for six decades.
+Frederick Burr Opper (1857–1937) is regarded as one of the pioneers of American newspaper comic strips, best known for his comic strip Happy Hooligan, Alphonse and Gaston, And Her Name Was Maud, Howsan Lott and Our Antediluvian Ancestors. His comic characters were featured in magazine gag cartoons, covers, political cartoons and comic strips for six decades.
 </p><p>
-Born to Austrian-American immigrants Lewis and Aurelia Burr Oppers in Madison, Ohio, Frederick was the eldest of three children. At the age of 14, he dropped out of school to work as a printer's apprentice at the local Madison Gazette, and at 16, he moved to New York City where he worked in a store and continued to draw. He studied briefly at Cooper Union, followed by a short stint as pupil and assistant to illustrator Frank Beard.
-</p><p>
-Opper's first cartoon was published in Wild Oats in 1876, followed by cartoons and illustrations in Scribner’s Monthly and St. Nicholas Magazine. He worked as illustrator at Frank Leslie's Weekly from 1877 to 1880. Opper was then hired to draw for Puck by publishers Joseph Keppler and Adolph Schwarzmann. He stayed with Puck for 18 years, drawing everything from spot illustrations to chromolithograph covers.
-</p><p>
-Opper's strips were very popular in Italy, where Hooligan was the most loved strip character in Italy before the coming of Mickey Mouse, as declared by the major Italian poet Attilio Bertolucci. 
+Opper's first cartoon was published in Wild Oats in 1876, followed by cartoons and illustrations in Scribner’s Monthly and St. Nicholas Magazine. He worked as illustrator at Frank Leslie's Weekly from 1877 to 1880. Opper was then hired to draw for <a href="../Puck/Puck.html">Puck</a> by publishers Joseph Keppler and Adolph Schwarzmann. He stayed with Puck for 18 years, drawing everything from spot illustrations to chromolithograph covers. His work was also published by <a href="../CupplesLeon/CupplesLeon.html">Cupples And Leon</a>, <a href="../FrederickStokesCo/FrederickStokesCo.html">Frederick A. Stokes Company</a> as well as <a href="../KingFeatures/KingFeatures.html">King Features Syndicate</a>. 
 </p><p>
 <li><a href="../HappyHooligan/HappyHooligan.html">Happy Hooligan</a> (1900)
-<li><a href="../AlphonseAndGaston/AlphonseAndGaston.html">Alphonse and Gaston</a>
-<li><a href="../AndHerNameWasMaud/AndHerNameWasMaud.html">And Her Name was Maud</a>
+<li><a href="../AlphonseAndGaston/AlphonseAndGaston.html">Alphonse and Gaston</a> (1901)
+<li><a href="../AndHerNameWasMaud/AndHerNameWasMaud.html">And Her Name was Maud</a> (1904)
+<li><a href="Opper11.jpg">Our Antediluvian Ancestors</a>
+<li><a href="Opper13.jpg">Howsan Lott</a>
+
 </p>
+
 </body>
 </html>
