--- a/EisnerIger/EisnerIger.html
+++ b/EisnerIger/EisnerIger.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Eisner &amp; Iger</h1>
+<img src="EisnerIger1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,11 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="EisnerIger1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EisnerIger2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EisnerIger3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EisnerIger4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EisnerIger5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -26,9 +30,9 @@
 </p><p>
 Eisner &amp; Iger was a comic book "packager" that produced comics on demand for publishers entering the new medium during the late-1930s and 1940s period fans and historians call the Golden Age of Comic Books. Many of comic books' most significant creators, including Jack Kirby, entered the field through its doors.
 </p><p>
-The company, formally titled the Eisner and Iger Studio, was also known as Syndicated Features Corporation. Will Eisner, in a 1997 interview, referred to the company as both "Eisner &amp; Iger" and the "Art Syndication Company". It existed from 1936 to 1939. In addition to comic books, the company also sold color comic strips, such as Adventures of the Red Mask and Pop's Night Out, to newspapers.
+The company, formally titled the Eisner and Iger Studio, was also known as Syndicated Features Corporation. Will Eisner, in a 1997 interview, referred to the company as both "Eisner &amp; Iger" and the "Art Syndication Company". It existed from 1936 to 1939 to service the emerging market for American comic books, which had originated as tabloid-sized magazines that reprinted newspaper comic strips, adding color to black-and-white daily comics. 
 </p><p>
-Eisner &amp; Iger was formed to service the emerging market for American comic books, which had originated in the early 1930s as tabloid-sized magazines that reprinted newspaper comic strips, adding color to black-and-white daily comics. By 1935, sporadic new material was beginning to be created for them. One such seminal comic book, Henle Publications' Wow, What a Magazine! published by John Henle and edited by Samuel Maxwell "Jerry" Iger, a former cartoonist. Wow, which folded after issue No. 4 (Nov. 1936), brought Iger together with a 19-year-old Will Eisner – the future creator of The Spirit and some of the earliest and most influential graphic novels – who wrote and drew the adventure feature "Scott Dalton", the pirate feature "The Flame", and the secret agent feature "Harry Karry" for Wow.
+One such seminal comic book, Henle Publications' Wow, What a Magazine! published by John Henle and edited by Jerry Iger. Wow brought Iger together with a 19-year-old Will Eisner who wrote and drew the adventure feature "Scott Dalton", the pirate feature "The Flame", and the secret agent feature "Harry Karry" for Wow.
 </p><p>
 However it was structured, the firm grew to be one of the most successful and influential of such comics packagers as Funnies, Inc. (which supplied the contents of Marvel Comics No. 1, including the Human Torch, the Sub-Mariner and the Angel) and the quirkily named Harry "A" Chesler's studio.
 </p><p>
