--- a/index.html
+++ b/index.html
@@ -53891,6 +53891,13 @@
 </tr>
 
 <tr>
+<td>Major Malcolm Wheeler-Nicholson</td>
+<td>1935</td>
+<td>Publisher</td>
+<td><a href="NationalAllied/NationalAllied.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Major Victory Comics</td>
 <td>1944</td>
 <td>Chesler
@@ -59444,6 +59451,13 @@
 <td>2012</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>National Allied Publications</td>
+<td>1935</td>
+<td>Publisher</td>
+<td><a href="NationalAllied/NationalAllied.html">Details</a></td>
 </tr>
 
 <tr>
