--- a/index.html
+++ b/index.html
@@ -46381,6 +46381,13 @@
 </tr>
 
 <tr>
+<td>Jimmy Swinnerton</td>
+<td>1875</td>
+<td>Creator</td>
+<td><a href="JimmySwinnerton/JimmySwinnerton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jindai</td>
 <td>2005</td>
 <td>Zenescope</td>
