--- a/index.html
+++ b/index.html
@@ -1619,6 +1619,12 @@
 </tr>
 
 <tr>
+<td>A.B. Frost</td>
+<td>1851</td>
+<td>Creator</td>
+<td><a href="ABFrost/ABFrost.html">Details</a></td>
+
+<tr>
 <td>A. Bizarro</td>
 <td>1999</td>
 <td>DC</td>
@@ -51471,7 +51477,7 @@
 <tr>
 <td>Little Jimmy</td>
 <td>1904</td>
-<td>James Swinerton</td>
+<td>Jimmy Swinnerton</td>
 <td><a href="LittleJimmy/LittleJimmy.html">Details</a></td>
 </tr>
 
@@ -56966,6 +56972,13 @@
 <td>1986</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Milo Winter</td>
+<td>1888</td>
+<td>Creator</td>
+<td><a href="MiloWinter/MiloWinter.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70139,7 +70152,7 @@
 <tr>
 <td>Sam And His Laugh</td>
 <td>1905</td>
-<td>James Swinerton</td>
+<td>Jimmy Swinnerton</td>
 <td><a href="SamAndHisLaugh/SamAndHisLaugh.html">Details</a></td>
 </tr>
 
@@ -78375,6 +78388,13 @@
 <td>1988</td>
 <td>Renegade</td>
 <td><a href="RenegadePress/RenegadePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>T.S. Sullivant</td>
+<td>1854</td>
+<td>Creator </td>
+<td><a href="TSSullivant/TSSullivant.html">Details</a></td>
 </tr>
 
 <tr>
