--- a/DanielClowes/DanielClowes.html
+++ b/DanielClowes/DanielClowes.html
@@ -43,6 +43,7 @@
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes22.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes25.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
