--- a/JimmySwinnerton/JimmySwinnerton.html
+++ b/JimmySwinnerton/JimmySwinnerton.html
@@ -27,6 +27,9 @@
 <div class="mySlides" style="text-align: center;"><img src="JimmySwinnerton7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JimmySwinnerton8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JimmySwinnerton9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimmySwinnerton10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimmySwinnerton11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimmySwinnerton12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
