--- a/SundayPressBooks/SundayPressBooks.html
+++ b/SundayPressBooks/SundayPressBooks.html
@@ -33,7 +33,8 @@
 <div class="mySlides" style="text-align: center;"><img src="SundayPressBooks13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SundayPressBooks14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SundayPressBooks15.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="SundayPressBooks16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SundayPressBooks17.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -53,21 +54,22 @@ Later Maresca himself stated that the joint between Sunday Press and IDW Publish
 </p><p>
 Titles
 </p><p>
-<li><a href="SundayPressBooks2.jpg">Little Nemo In Slumberland: So Many Splendid Sundays!</a>
-<li><a href="SundayPressBooks1.jpg">Little Nemo In Slumberland: Many More Splendid Sundays!</a>
-<li><a href="SundayPressBooks3.jpg">Society Is Nix: Gleeful Anarchy At The Dawn Of The American Comic Strip</a>
-<li><a href="SundayPressBooks4.jpg">White Boy</a>
-<li><a href="SundayPressBooks5.jpg">Dick Tracy: Colorful Cases Of The 1930s</a>
-<li><a href="SundayPressBooks6.jpg">Foolish Questions: Rube Goldberg Early Comics 1909-1919</a>
-<li><a href="SundayPressBooks7.jpg">Crazy Quilt: Scraps &amp; Panels On The Way To Gasoline Alley</a>
-<li><a href="SundayPressBooks8.jpg">Thimble Theater: The Pre-Popeye Comics of E.C. Segar</a>
-<li><a href="SundayPressBooks9.jpg">Little Joe by Harold Gray</a>
-<li><a href="SundayPressBooks10.jpg">Forgotten Fantasy: Sunday Comics 1900-1915</a>
-<li><a href="SundayPressBooks11.jpg">George Herriman's Krazy Kat</a>
-<li><a href="SundayPressBooks12.jpg">Sundays With Walt And Skeezix</a>
-<li><a href="SundayPressBooks13.jpg">Queer Visitors From The Marvelous Land Of Oz</a>
-<li><a href="SundayPressBooks14.jpg">The Upside-Down World Of Gustave Verbeek</a>
-<li><a href="SundayPressBooks15.jpg">Little Sammy Sneeze</a>
+<li><a href="SundayPressBooks7.jpg">Crazy Quilt: Scraps &amp; Panels On The Way To Gasoline Alley</a> (2018)
+<li><a href="SundayPressBooks5.jpg">Dick Tracy: Colorful Cases Of The 1930s</a> (2016)
+<li><a href="SundayPressBooks6.jpg">Foolish Questions: Rube Goldberg Early Comics 1909-1919</a> (2017)
+<li><a href="SundayPressBooks10.jpg">Forgotten Fantasy: Sunday Comics 1900-1915</a> (2011)
+<li><a href="SundayPressBooks11.jpg">George Herriman's Krazy Kat</a> (2010)
+<li><a href="SundayPressBooks16.jpg">Gross Exaggerations: The Meshuga Comic Strips of Milt Gross</a> (2020)
+<li><a href="SundayPressBooks9.jpg">Little Joe by Harold Gray</a> (2019)
+<li><a href="SundayPressBooks2.jpg">Little Nemo In Slumberland: So Many Splendid Sundays!</a> (2005)
+<li><a href="SundayPressBooks1.jpg">Little Nemo In Slumberland: Many More Splendid Sundays!</a> (2008)
+<li><a href="SundayPressBooks15.jpg">Little Sammy Sneeze</a> (2007)
+<li><a href="SundayPressBooks13.jpg">Queer Visitors From The Marvelous Land Of Oz</a> (2009)
+<li><a href="SundayPressBooks3.jpg">Society Is Nix: Gleeful Anarchy At The Dawn Of The American Comic Strip</a> (2013)
+<li><a href="SundayPressBooks12.jpg">Sundays With Walt And Skeezix</a> (2007)
+<li><a href="SundayPressBooks8.jpg">Thimble Theater: The Pre-Popeye Comics of E.C. Segar</a> (2018)
+<li><a href="SundayPressBooks17.jpg">Upside-Down World of Gustave Verbeek</a> (2009)
+<li><a href="SundayPressBooks4.jpg">White Boy</a> (2015)
 </p>
 
 </body>
