--- a/index.html
+++ b/index.html
@@ -22636,6 +22636,13 @@
 </tr>
 
 <tr>
+<td>Crazy Quilt: Scraps & Panels On The Way To Gasoline Alley</td>
+<td>2018</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crazy, Man, Crazy</td>
 <td>1955</td>
 <td>Charlton</td>
@@ -27191,6 +27198,13 @@
 </tr>
 
 <tr>
+<td>Dick Tracy: Colorful Cases Of The 1930s</td>
+<td>2016</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dick Tracy: Forever</td>
 <td>2019</td>
 <td>IDW</td>
@@ -27384,6 +27398,13 @@
 <td>2009</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dink Shannon</td>
+<td>1870</td>
+<td>Creator</td>
+<td><a href="DinkShannon/DinkShannon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35097,6 +35118,13 @@
 </tr>
 
 <tr>
+<td>Foolish Questions: Rube Goldberg Early Comics</td>
+<td>2017</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>FOOM</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -37306,6 +37334,13 @@
 <td>1880</td>
 <td>Creator</td>
 <td><a href="GeorgeHerriman/GeorgeHerriman.html">Details</a>
+</tr>
+
+<tr>
+<td>George Herriman: Krazy Kat</td>
+<td>2010</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39840,6 +39875,13 @@
 <td>1968</td>
 <td>Marvel</td>
 <td><a href="Groovy/Groovy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gross Exaggerations: The Meshuga Comic Strips Of Milt Gross</td>
+<td>2020</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51489,6 +51531,13 @@
 </tr>
 
 <tr>
+<td>Little Joe</td>
+<td>2019</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Little King</td>
 <td>1934</td>
 <td>King Features</td>
@@ -51608,6 +51657,20 @@
 </tr>
 
 <tr>
+<td>Little Nemo In Slumberland: So Many Splendid Sundays!</td>
+<td>2005</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Little Nemo In Slumberland: Many More Splendid Sundays!</td>
+<td>2008</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Little Nemo: Return to Slumberland</td>
 <td>2014</td>
 <td>IDW</td>
@@ -51661,6 +51724,13 @@
 <td>1964</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Little Sammy Sneeze</td>
+<td>2007</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66384,6 +66454,13 @@
 </tr>
 
 <tr>
+<td>Queen Visitors From The Marvelous Land Of Oz</td>
+<td>2009</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Quest For Tomorrow</td>
 <td>2010</td>
 <td>Tidalwave</td>
@@ -69846,6 +69923,20 @@
 <td>2010</td>
 <td>Marvel</td>
 <td><a href="SHIELD/SHIELD.html">Details</a></td>
+</tr>
+
+<tr>
+<td>S.R. Bissette’s SpiderBaby Comix</td>
+<td>1996</td>
+<td>Spiderbaby Grafix</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
+</tr>
+
+<tr>
+<td>S.R. Bissette’s Tyrant</td>
+<td>1994</td>
+<td>Spiderbaby Grafix</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
 </tr>
 
 <tr>
@@ -74177,6 +74268,13 @@
 </tr>
 
 <tr>
+<td>Society Is Nix: Gleeful Anarchy At The Dawn Of The American Comic Strip</td>
+<td>2013</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sock Monkey</td>
 <td>1998</td>
 <td>Dark Horse</td>
@@ -75224,20 +75322,6 @@
 <td>1953</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
-</tr>
-
-<tr>
-<td>S.R. Bissette’s SpiderBaby Comix</td>
-<td>1996</td>
-<td>Spiderbaby Grafix</td>
-<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
-</tr>
-
-<tr>
-<td>S.R. Bissette’s Tyrant</td>
-<td>1994</td>
-<td>Spiderbaby Grafix</td>
-<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
 </tr>
 
 <tr>
@@ -77656,6 +77740,13 @@
 </tr>
 
 <tr>
+<td>Sundays With Walt And Skeezix</td>
+<td>2007</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sundown</td>
 <td>2005</td>
 <td>Arcana</td>
@@ -79753,6 +79844,13 @@
 <td>1987</td>
 <td>Silver Wolf</td>
 <td><a href="SilverWolf/SilverWolf.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thimble Theater: The Pre-Popeye Comics Of E.C. Segar</td>
+<td>2018</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -82903,6 +83001,13 @@
 </tr>
 
 <tr>
+<td>Upside-Down World Of Gustave Verbeek</td>
+<td>2009</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Uptight</td>
 <td>2006</td>
 <td>Fantagraphics</td>
@@ -85957,6 +86062,13 @@
 <td>2012</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>White Boy</td>
+<td>2015</td>
+<td>Sunday Press</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
 </tr>
 
 <tr>
