--- a/Popeye/Popeye.html
+++ b/Popeye/Popeye.html
@@ -29,12 +29,19 @@
 <div class="mySlides" style="text-align: center;"><img src="Popeye8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Popeye9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Popeye10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ECSegar8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Popeye the Sailor is a cartoon fictional character created by Elzie Crisler Segar. The character first appeared in the daily <a href="../KingFeatures/KingFeatures.html">King Features</a> comic strip Thimble Theatre on January 17, 1929, and Popeye became the strip's title in later years. Popeye has also appeared in theatrical and television animated cartoons.
+Popeye the Sailor is a cartoon fictional character created by Elzie Crisler Segar (1894-1938), known by the pen name E. C. Segar. The character first appeared in the daily <a href="../KingFeatures/KingFeatures.html">King Features</a> comic strip Thimble Theatre on January 17, 1929, and Popeye became the strip's title in later years. Popeye has also appeared in theatrical and television animated cartoons.
 </p><p>
 Segar's Thimble Theatre strip was in its 10th year when Popeye made his debut, but the one-eyed sailor quickly became the main focus of the strip, and Thimble Theatre became one of King Features' most popular properties during the 1930s. After Segar's death in 1938, Thimble Theatre was continued by several writers and artists, most notably Segar's assistant Bud Sagendorf. The strip continues to appear in first-run installments in its Sunday edition, written and drawn by Hy Eisman. The daily strips are reprints of old Sagendorf stories.
 </p><p>
