--- a/index.html
+++ b/index.html
@@ -29884,6 +29884,13 @@
 </tr>
 
 <tr>
+<td>Dwig</td>
+<td>1874</td>
+<td>Creator</td>
+<td><a href="Dwig/Dwig.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dynamic Comics</td>
 <td>1943</td>
 <td>Chesler</td>
@@ -29944,6 +29951,13 @@
 <td>1989</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>E.C. Segar</td>
+<td>1894</td>
+<td>Creator</td>
+<td><a href="Popeye/Popeye.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37390,6 +37404,13 @@
 <td>1945</td>
 <td>Spotlight</td>
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gene Ahern</td>
+<td>1895</td>
+<td>Creator</td>
+<td><a href="GeneAhern/GeneAhern.html">Details</a></td>
 </tr>
 
 <tr>
@@ -69744,6 +69765,13 @@
 </tr>
 
 <tr>
+<td>Rube Goldberg</td>
+<td>1883</td>
+<td>Creator</td>
+<td><a href="RubeGoldberg/RubeGoldberg.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ruck bud Webster And his Screeching Commandos</td>
 <td>1987</td>
 <td>Pyramid</td>
@@ -84573,6 +84601,20 @@
 <td>1996</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Walter Bradford</td>
+<td>1872</td>
+<td>Creator</td>
+<td><a href="WalterBradford/WalterBradford.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Walter Hoban</td>
+<td>1890</td>
+<td>Creator</td>
+<td><a href="WalterHoban/WalterHoban.html">Details</a></td>
 </tr>
 
 <tr>
