--- a/index.html
+++ b/index.html
@@ -43657,6 +43657,13 @@
 </tr>
 
 <tr>
+<td>Humberto Ramos</td>
+<td>1970</td>
+<td>Creator</td>
+<td><a href="HumbertoRamos/HumbertoRamos.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Humbug</td>
 <td>1957</td>
 <td>Humbug</td>
