source point press

--- a/SourcePointPress/SourcePointPress.html
+++ b/SourcePointPress/SourcePointPress.html
@@ -131,7 +131,7 @@ Source Point Press publishes books, comic books, and graphic novels since 2012. 
 <li><a href="SourcePointPress16.jpg">Create Your Own Comic</a> 2014
 <li><a href="SourcePointPress17.jpg">Damnation of Charlie Wormwood</a> 2019
 <li><a href="SourcePointPress18.jpg">Danger Devil</a>  	2020
-<li><a href="SourcePointPress19.jpg">The Dark: Collection</a>  	2019
+<li><a href="SourcePointPress19.jpg">Dark: Collection</a>  	2019
 <li><a href="SourcePointPress20.jpg">Day 165</a> 2018
 <li><a href="SourcePointPress21.jpg">Dead Duck and Zombie Chick: Rising from the Grave</a>	2018
 <li><a href="SourcePointPress22.jpg">Dead End Kids</a>  2019
@@ -176,16 +176,16 @@ Source Point Press publishes books, comic books, and graphic novels since 2012. 
 <li><a href="SourcePointPress61.jpg">Prisoner</a>  	2020
 <li><a href="SourcePointPress62.jpg">Rejected</a>  	2018
 <li><a href="SourcePointPress63.jpg">Rejected: Dead Girl </a> 	2019
-<li><a href="SourcePointPress64.jpg">The Rejected: Long is the Way</a> 	2020
-<li><a href="SourcePointPress65.jpg">The Rejected: The Unwilling</a>  	2019
+<li><a href="SourcePointPress64.jpg">Rejected: Long is the Way</a> 	2020
+<li><a href="SourcePointPress65.jpg">Rejected: The Unwilling</a>  	2019
 <li><a href="SourcePointPress66.jpg">Remnant </a> 	2020
 <li><a href="SourcePointPress67.jpg">Roads (Not) Traveled </a> 	2019
-<li><a href="SourcePointPress68.jpg">The Rot </a> 	2015
+<li><a href="SourcePointPress68.jpg">Rot </a> 	2015
 <li><a href="SourcePointPress69.jpg">Rottentail</a>  2019
 <li><a href="SourcePointPress70.jpg">Salvagers </a> 2018
 <li><a href="SourcePointPress71.jpg">Samurai Grandpa</a> 2019
 <li><a href="SourcePointPress72.jpg">Savants</a>  	2019
-<li><a href="SourcePointPress73.jpg">The Seance Room</a>  	2020
+<li><a href="SourcePointPress73.jpg">Seance Room</a>  	2020
 <li><a href="SourcePointPress74.jpg">Seeress: Embla of the Dead </a> 2020
 <li><a href="SourcePointPress75.jpg">Seeress: Reckless</a> 2019
 <li><a href="SourcePointPress76.jpg">Seeress: Terkon And The Great Divide </a> 	2020
@@ -195,8 +195,8 @@ Source Point Press publishes books, comic books, and graphic novels since 2012. 
 <li><a href="SourcePointPress80.jpg">TerraQuill Expedition One </a> 2019
 <li><a href="SourcePointPress81.jpg">Torsobear</a> 2019
 <li><a href="SourcePointPress82.jpg">Touching Evil</a> 2019
-<li><a href="SourcePointPress83.jpg">The Viking Queen</a> 2018
-<li><a href="SourcePointPress84.jpg">The Viking Queen: Sleepers in Shadow</a>  	2020
+<li><a href="SourcePointPress83.jpg">Viking Queen</a> 2018
+<li><a href="SourcePointPress84.jpg">Viking Queen: Sleepers in Shadow</a>  	2020
 <li><a href="SourcePointPress85.jpg">Wild Bullets: Christmas</a>  	2015
 <li><a href="SourcePointPress86.jpg">Wild Bullets: Thanksgiving </a> 	2015
 <li><a href="SourcePointPress87.jpg">Wild Strawberries at the World's End</a>  	2019
